--- a/youtube-clone-study/style.css
+++ b/youtube-clone-study/style.css
@@ -31,19 +31,32 @@ header {
   align-items: center;
 }
 
+.title a {
+  text-decoration: none;
+  color: #000000;
+}
+
 .menu {
+  position: absolute;
+  width: 95%;
   grid-area: menu;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  gap: 10px;
+  overflow: scroll;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .menuItem {
+  position: relative;
   background: #f2f2f2;
   font-size: 10px;
   padding: 7px 10px;
   border-radius: 5px;
   font-weight: bold;
+  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 header img {
@@ -64,7 +77,7 @@ main {
   width: 95%;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 10px 10px;
   padding: 10px;
 }
